--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=League+Spartan:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+3:wght@200..900&display=swap" rel="stylesheet">
 
     <!-- External CSS file -->
-    <link rel="stylesheet" href="/dist/style.css">
+    <link rel="stylesheet" href="dist/style.css">
     
     <!-- External JavaScript file -->
     <script src="/app/js/script.js"></script>
@@ -33,7 +33,7 @@
             <!-- <img src="/images/sand.JPG" alt="Sand background" class="topnav__background" /> -->
             <!-- Home link -->
             <a href="/" class="topnav__homelink hover-fade">
-                <img src="/images/homepage/logo_nano-removebg-preview.png" alt="Nanofertech Homepage" class="topnav__logo" width="250" height="250"/>
+                <img src="images/homepage/logo_nano-removebg-preview.png" alt="Nanofertech Homepage" class="topnav__logo" width="250" height="250"/>
             </a>
 
             <div class="topnav__site-tagline">Less is the New Lead to <br> Abundance </div>
@@ -133,21 +133,21 @@
                 <h4 class="visually hidden"><Home></h4>
         <div class="wrapper home__wrapper">
         <div class="home__item">
-            <img width="400" height="400" src="/images/homepage/FERTILIZER.jpg" class="home__image" alt="" >
+            <img width="400" height="400" src="images/homepage/FERTILIZER.jpg" class="home__image" alt="" >
             <h3 class="home__headline">Fertilizer the Lifeline of Agriculture</h3> 
             <a class="home__button button secondary" href="">Learn More</a>
         </div>
 
         <!-- <div class="wrapper home__wrapper"> -->
         <div class="home__item">
-            <img width="400" height="400" src="/images/homepage/SOIL.jpg" class="home__image" alt="">
+            <img width="400" height="400" src="images/homepage/SOIL.jpg" class="home__image" alt="">
             <h3 class="home__headline">Nurturing Soil for Sustainable Food Production</h3>
             <a class="home__button button secondary" href="">Learn More</a>
         </div>
 
     <!-- <div class="wrapper home__wrapper"> -->
         <div class="home__item">
-            <img width="400" height="400" src="/images/homepage/CRT.jpg" class="home__image" alt=""> 
+            <img width="400" height="400" src="images/homepage/CRT.jpg" class="home__image" alt=""> 
             <h3 class="home__headline">LAMATu the New Generation CRT</h3>
             <a class="home__button button secondary" href="">Learn More</a>
         </div> 
@@ -252,7 +252,7 @@
                         <img src="images/homepage/farmer.jpg" class="home-publication__image" alt="" decoding="async">
                     </div>
                     <div class="home-publication__item">
-                        <img class="home-publication__logo" src="/images/pubmed-logo-blue.svg" alt="">
+                        <img class="home-publication__logo" src="images/pubmed-logo-blue.svg" alt="">
                         <h3 class="home-publication__title">
                             <a href="https://pubmed.ncbi.nlm.nih.gov/36424408/" class="home-publication__title">Green synthesis and characterization of UKMRC-8 rice husk-derived mesoporous silica nanoparticle for agricultural application</a>
                         </h3>
@@ -268,7 +268,7 @@
                         <img src="images/homepage/river.jpg" class="home-publication__image" alt="" decoding="async">
                     </div>
                     <div class="home-publication__item">
-                        <img class="home-publication__logo" src="/images/frontier_logo.webp" alt="">
+                        <img class="home-publication__logo" src="images/frontier_logo.webp" alt="">
                         <h3 class="home-publication__title">
                             <a href="https://www.frontiersin.org/journals/sustainable-food-systems/articles/10.3389/fsufs.2023.1093605/full" class="home-publication__title">Rice and paddy industry in Malaysia: governance and policies, research trends, technology adoption and resilience</a>
                         </h3>
@@ -284,7 +284,7 @@
                         <img src="images/homepage/drone.jpg" class="home-publication__image" alt="" decoding="async">
                     </div>
                     <div class="home-publication__item">
-                        <img class="home-publication__logo" src="/images/TFO-logo-new.svg" alt="">
+                        <img class="home-publication__logo" src="images/TFO-logo-new.svg" alt="">
                         <h3 class="home-publication__title">
                             <a href="https://www.tandfonline.com/doi/full/10.1080/01904167.2021.2014878" class="home-publication__title">Comparative evaluation on calcium silicate and rice husk ash amendment for silicon-based fertilization of Malaysian rice (Oryza sativa L.) varieties</a>
                         </h3>
@@ -344,7 +344,7 @@
 </ul>
 </section>
 <section class="footer__logo"><a href="/" class="footer__homelink hover-fade">
-                <img src="/images/homepage/logo_nano-removebg-preview.png" alt="Mythos Homepage" class="footer__logo-image" width="128" height="36"/>
+                <img src="images/homepage/logo_nano-removebg-preview.png" alt="Mythos Homepage" class="footer__logo-image" width="128" height="36"/>
             </a>
             <p class="footer__copyright">All Content © 2024 <br> Nanofertech Sdn. Bhd</p>
 </section>
